--- a/FilmApp/MainWindow.xaml
+++ b/FilmApp/MainWindow.xaml
@@ -4,14 +4,56 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FilmApp.Model"
+        xmlns:materialDesing ="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="FilmApp" Icon="C:\Users\pavlo\Desktop\2.1\CoursWork\FilmApp\FilmApp\img\film.png" Height="450" MinHeight="400" Width="800" MinWidth="500">
     <Window.DataContext>
         <local:FilmList/>
     </Window.DataContext>
-    <Grid>
-        
-        <Grid.RowDefinitions>
+    <Grid Background="White">
+        <Grid MinHeight="50" VerticalAlignment="Top" Background="#FF2C2E56" >
+            <TextBlock Text="Film App" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="25"/>
+            <!--<materialDesing:PopupBox  HorizontalAlignment="Right" Margin="10" PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Background="#FFE7E2E2"/>-->
+        </Grid>
+        <Grid Width="200" HorizontalAlignment="Left" Background="#FF242148">
+            <StackPanel>
+                <Grid Height="90" Background="White">
+                    <Button x:Name="BCloseMenu" Width="60" Height="60"  Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top"  HorizontalAlignment="Right" Visibility="Collapsed" >
+                        <materialDesing:PackIcon Foreground ="#FF242148" Kind="ArrowLeft" Width="25" />
+                    </Button>
+                    <Button x:Name="BOpenMenu" Width="60" Height="60"  Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top"  HorizontalAlignment="Right" >
+                        <materialDesing:PackIcon Foreground ="#FF242148" Kind="Menu" Width="25" />
+                    </Button>
+                </Grid>
+                <ListView Foreground="#FF2C2E56">
+                    <ListViewItem Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesing:PackIcon Kind="ViewDashboard" Width="20" Height="20" VerticalAlignment="Center"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="20 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesing:PackIcon Kind="ViewDashboard" Width="20" Height="20" VerticalAlignment="Center"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="20 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesing:PackIcon Kind="ViewDashboard" Width="20" Height="20" VerticalAlignment="Center"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="20 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesing:PackIcon Kind="ViewDashboard" Width="20" Height="20" VerticalAlignment="Center"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="20 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                </ListView>
+            </StackPanel>
+        </Grid>
+        <!--<Grid.RowDefinitions>
             <RowDefinition Height="0.15*"/>
             <RowDefinition Height="0.5*" />
             <RowDefinition />
@@ -74,6 +116,6 @@
         <Button x:Name="BFindFilmsByCountry"  Grid.Row="4" Grid.Column="2" Click="BFindFilmsByCountry_Click"  >
             <TextBlock Text="Find movies with the biggest budgets and the shortest duration  :" TextWrapping="Wrap" TextAlignment="Center"></TextBlock>
         </Button>
-        <TextBox x:Name="Country" Text="Enter country"  Grid.Row="4" Grid.Column="3" LostFocus="Country_LostFocus" GotFocus="Country_GotFocus" />
+        <TextBox x:Name="Country" Text="Enter country"  Grid.Row="4" Grid.Column="3" LostFocus="Country_LostFocus" GotFocus="Country_GotFocus" />-->
     </Grid>
 </Window>
