--- a/FilmApp/MVVM/ViewModel/DashboardViewModel.xaml
+++ b/FilmApp/MVVM/ViewModel/DashboardViewModel.xaml
@@ -20,9 +20,9 @@
                 <Grid >
                     <StackPanel>
                         <ScrollViewer Grid.Row="2" Grid.ColumnSpan="4" HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Center" VerticalScrollBarVisibility="Auto" >
-                            <DataGrid  Background="{x:Null}" x:Name="FilmTable" Grid.ColumnSpan="4" ItemsSource="{Binding }" HorizontalAlignment="Center" AutoGenerateColumns="True" HorizontalGridLinesBrush="Black" VerticalGridLinesBrush="Black">
-                            </DataGrid>
+                            <DataGrid  Background="{x:Null}" x:Name="FilmTable" Grid.ColumnSpan="4" ItemsSource="{Binding }" HorizontalAlignment="Center" AutoGenerateColumns="True" HorizontalGridLinesBrush="Black" VerticalGridLinesBrush="Black"/>
                         </ScrollViewer>
+                        <TextBlock x:Name="amount_fo_films" Margin="10 20 10 10" Text="Amount of films: " TextAlignment="Center"/>
                     </StackPanel>
                 </Grid>
             </Border>
@@ -43,7 +43,7 @@
                     <Button x:Name="FindFilmsWithActor" Background="#FF242148" Margin="5" Click="FindFilmsWithActor_Click">
                         <TextBox Text="Find films with actor belong" MinHeight="30"/>
                     </Button>
-                    <Border BorderBrush="#FFDA2020" Background="#FFCEE7F9"  Margin="5" MinHeight="25">
+                    <Border Background="#FFFBEB"  Margin="5" MinHeight="25">
                         <TextBox x:Name="parametr_to_find" FontWeight="Bold" Padding="3" />
                     </Border>
 
@@ -58,11 +58,11 @@
                         <GradientStop Color="#FF930179" Offset="1"/>
                     </LinearGradientBrush>
                 </Border.Background>
-                <StackPanel  VerticalAlignment="Center">
-                    <Button x:Name="BFindWithIdentDirAndLowesPRice" Background="#FF242148" Margin="5" MinHeight="60" >
-                        <TextBox Text="Find films with identical director and the lowest price" MaxWidth="200" MinHeight="30" TextWrapping="WrapWithOverflow"  TextAlignment="Center"/>
+                <StackPanel  VerticalAlignment="Center" >
+                    <Button x:Name="BFindWithIdentDirAndLowesPRice" Background="#FF242148" Margin="10" MinHeight="60" Click="BFindWithIdentDirAndLowesPRice_Click" >
+                       <TextBox Text="Find films with identical director and the lowest price" MaxWidth="200" MinHeight="30" TextWrapping="WrapWithOverflow"  TextAlignment="Center"/>
                     </Button>
-                    <Button x:Name="FindFilmsWithActo" Background="#FF242148" MinHeight="60" Margin="5" >
+                    <Button x:Name="FindLongesstForEachDirector" Background="#FF242148" MinHeight="60" Margin="10" Click="FindLongesstForEachDirector_Click" >
                         <TextBox Text="Find the longest films for each director " MinHeight="30" MaxWidth="200" TextAlignment="Center" TextWrapping="WrapWithOverflow"/>
                     </Button>
 
